apply panache entity pattern